@@ -144,6 +144,9 @@ New Roles
   dragon scales and dragon scale mail, which makes their midgame very difficult.
   Their quest artifact is Sharur, a talking ornate mace.
 
+New Traps
+- Buzzsaw Trap
+
 New Artifacts
 - Gungnir
 - Gleipnir
